# hangar

./: .dockerignore  .gitignore  .hangar.json  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  prd.md  release-please-config.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5c0cdbd880ff_initial_schema.py  b7e1c0ffee01_add_webhook_secret.py  c2d3e4f5a6b7_add_connection_owner.py  d3e4f5a6b7c8_add_repo_pull_requests.py  d9e0f1a2b3c4_add_repo_suppressions.py  e4f5a6b7c8d9_add_connection_repo_allowlist.py
backend/src/hangar/: __init__.py  config.py  main.py
backend/tests/: conftest.py
backend/tests/contract/: test_gitea_contract.py  test_overview_api.py  test_repoprovider_contract.py  test_scorecard_api.py
backend/tests/integration/: test_auth_header_trust.py  test_auth_mode.py  test_auth_oidc_flow.py  test_auth_oidc_session.py  test_bulk_remediation.py  test_container_migrations.py  test_credential_encryption.py  test_credential_reuse.py  test_gitea_interrogate.py  test_gitea_remediation.py  test_github_app_flow.py  test_github_live.py  test_manual_refresh.py  test_multi_connection.py  test_oidc_tls_trust.py  test_overview_perf.py  test_pr_interrogation.py  test_readpath_scope.py  test_remediation_idempotency.py  test_remediation_pr_first.py  test_remediation_readonly.py  test_repo_allowlist.py  test_review_fixes.py  test_schema_reconcile.py  test_security_fixes.py  test_security_hygiene.py
backend/tests/unit/: test_bot_pr_classification.py  test_catalog_doc_urls.py  test_check_eval.py  (+9 more)
(+139 files in other folders)
