[project]
name = "hangar"
version = "0.3.11"
description = "Hangar — self-hosted fleet control plane (provider-agnostic core)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "githubkit[auth-app]>=0.11",
    "apscheduler>=3.10",
    "cryptography>=43.0",
    "structlog>=24.4",
    "httpx>=0.27",
    "authlib>=1.3",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hangar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# B008: FastAPI's Depends()/Query() in argument defaults is the framework idiom.
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
packages = ["hangar"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
